Fixed double scrollbar, adjusted cypress test.

--- a/css/annotations/popup.scss
+++ b/css/annotations/popup.scss
@@ -125,7 +125,7 @@ $highlight-color-80: #335cad;
 .highcharts-indicator-list {
   float: left;
   color: $neutral-color-60;
-  height: calc(100% - 70px);
+  height: calc(100% - 150px);
   width: 100%;
   overflow-x: hidden;
   margin: 0px;
